@@ -1,4 +1,4 @@
-/*	$NetBSD: getcom.c,v 1.11 2003/08/07 09:37:02 agc Exp $	*/
+/*	$NetBSD: getcom.c,v 1.12 2004/11/05 21:30:31 dsl Exp $	*/
 
 /*
  * Copyright (c) 1983, 1993
@@ -34,7 +34,7 @@
 #if 0
 static char sccsid[] = "@(#)getcom.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: getcom.c,v 1.11 2003/08/07 09:37:02 agc Exp $");
+__RCSID("$NetBSD: getcom.c,v 1.12 2004/11/05 21:30:31 dsl Exp $");
 #endif
 #endif				/* not lint */
 
@@ -54,7 +54,7 @@ getcom(buf, size, prompt, error)
 			clearerr(stdin);
 			continue;
 		}
-		while (isspace(*buf))
+		while (isspace((unsigned char)*buf))
 			buf++;
 		if (*buf)
 			break;
@@ -83,25 +83,25 @@ getword(buf1, buf2, flag)
 	int cnt;
 
 	cnt = 1;
-	while (isspace(*buf1))
+	while (isspace((unsigned char)*buf1))
 		buf1++;
 	if (*buf1 != ',') {
 		if (!*buf1) {
 			*buf2 = 0;
 			return (0);
 		}
-		while (cnt < WORDLEN && *buf1 && !isspace(*buf1) && *buf1 != ',')
+		while (cnt < WORDLEN && *buf1 && !isspace((unsigned char)*buf1) && *buf1 != ',')
 			if (flag < 0) {
-				if (isupper(*buf1)) {
-					*buf2++ = tolower(*buf1++);
+				if (isupper((unsigned char)*buf1)) {
+					*buf2++ = tolower((unsigned char)*buf1++);
 					cnt++;
 				} else {
 					*buf2++ = *buf1++;
 					cnt++;
 				}
 			} else if (flag > 0) {
-				if (islower(*buf1)) {
-					*buf2++ = toupper(*buf1++);
+				if (islower((unsigned char)*buf1)) {
+					*buf2++ = toupper((unsigned char)*buf1++);
 					cnt++;
 				} else {
 					*buf2++ = *buf1++;
@@ -112,12 +112,12 @@ getword(buf1, buf2, flag)
 				cnt++;
 			}
 		if (cnt == WORDLEN)
-			while (*buf1 && !isspace(*buf1))
+			while (*buf1 && !isspace((unsigned char)*buf1))
 				buf1++;
 	} else
 		*buf2++ = *buf1++;
 	*buf2 = '\0';
-	while (isspace(*buf1))
+	while (isspace((unsigned char)*buf1))
 		buf1++;
 	return (*buf1 ? buf1 : NULL);
 }
