@@ -1,4 +1,4 @@
-/*	$NetBSD: move.c,v 1.14 2004/04/06 19:15:07 jdc Exp $	*/
+/*	$NetBSD: move.c,v 1.15 2004/11/05 21:30:32 dsl Exp $	*/
 
 /*
  * Copyright (c) 1983, 1993
@@ -34,7 +34,7 @@
 #if 0
 static char sccsid[] = "@(#)move.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: move.c,v 1.14 2004/04/06 19:15:07 jdc Exp $");
+__RCSID("$NetBSD: move.c,v 1.15 2004/11/05 21:30:32 dsl Exp $");
 #endif
 #endif /* not lint */
 
@@ -367,9 +367,9 @@ getmove()
 		refresh();
 		while ((c = readch()) == killchar() || c == erasechar())
 			continue;
-		if (islower(c))
-			c = toupper(c);
-		if (isprint(c) && !isspace(c)) {
+		if (islower((unsigned char)c))
+			c = toupper((unsigned char)c);
+		if (isprint((unsigned char)c) && !isspace((unsigned char)c)) {
 			addch(c);
 			refresh();
 		}
