@@ -1,6 +1,7 @@
-#	$NetBSD: Makefile,v 1.6 1998/02/18 22:37:32 jtc Exp $
+#	$NetBSD: Makefile,v 1.7 2004/11/13 10:22:13 christos Exp $
 #	@(#)Makefile	8.1 (Berkeley) 5/31/93
 
+WARNS=3
 PROG=	worms
 MAN=	worms.6
 DPADD=	${LIBCURSES}
